2006-02-24  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/mt940/gnc-mt940-import.c: Get MT940 importer
	compile again (experimental; requires aqbanking-1.9.7). It is not
	yet tested with actual files. Bug#325170.

	* src/import-export/import-account-matcher.h: Make gchar argument
	const because it is only used as a const.

2006-02-23  David Hampton  <hampton@employees.org>

	* src/report/report-system/html-utilities.scm: Andrew
	Sackville-West's to pass the rignt number of arguments to
	gnc:register-guid.

	* src/report/report-gnome/gnc-plugin-page-report.c:
	* src/gnome-utils/gnc-recurrence.c:
	* src/gnome-utils/gnc-plugin-file-history.c:
	* src/gnome-utils/gnc-main-window.c:
	* src/gnome-utils/gnc-plugin-page.[ch]:
	* src/gnome-utils/dialog-commodity.c:
	* src/gnome/gnc-plugin-page-register.c: Minor code cleanup and
	consolidations.

2006-02-23  Joshua Sled  <jsled@asynchronous.org>

	* gentoo/gnucash-1.9.x.ebuild: Add ebuild for gnucash 1.9/2.0 series.

	* src/gnome-utils/dialog-totd.c (gnc_totd_dialog): Increment TOTD
	index on dialog init.

	* src/gnome-utils/gnc-html-graph-gog.c (handle_barchart): fix
	x-axis labeling.  Patch from Andreas Köhler.  Bug#332359.

2006-02-23  Derek Atkins  <derek@ihtfp.com>

	* src/import-export/qif-import/test/Makefile.am:
	  add QOF_LIBS to link line because debian libtool is broken.
	
2006-02-22  Derek Atkins  <derek@ihtfp.com>

	* src/gnome/gnc-plugin-page-register.c:
	  include gtk-compat.h so we build against gtk-2.4.

	* src/gnome-utils/Makefile.am:
	  force a build from svn to have access to svn version info.
	  this might break the broken ebuild that forcibly removes the
	  .svn directories, but the ebuild is broken and shouldn't do that.

2006-02-22  David Hampton  <hampton@employees.org>

	* src/gtk-compat.h:
	* src/gnome/gnc-plugin-page-register.c: Cleanup patch from Andreas
	Köhler.

	* src/register/ledger-core/split-register.[ch]:
	* src/register/ledger-core/split-register-control.c: